finalizing my work

--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+        <nav class="nav-class"><ul >
+            <li><a href=".featured-flower" class="nav-list-one">Featured Flower</a></li>
+        </ul>
+        <ul >
+            <li><a href=".hot-deal-text">Hot Deal</a></li>
+        </ul>
+        <ul>
+            <li><a href=".about-us-footer">About Us</a></li>
+        </ul></nav>
+    </header>
     <main>
       <section>
         <div class="shop-intro-container">
@@ -28,7 +38,9 @@
               distribution of letters.
             </p>
             <!-- <button class="btn-primary" target="_blank">Shop Now</button> -->
-            <a href="/shopNow.html"class="btn-primary-shop-now" target="_blank">Shop Now</a>
+            <a href="/shopNow.html" class="btn-primary-shop-now" target="_blank"
+              >Shop Now</a
+            >
           </div>
           <img class="shop-intro-flower" src="./images/pngwing 10.png" alt="" />
         </div>
@@ -56,26 +68,58 @@
       </section>
       <section class="hot-deal-container">
         <div class="hot-deal-text">
-            <h3>Hot Deal ! Sale Up To 25% Off</h3>
-            <p>It is a long established fact that a flower can change mood of an aristrocratic nature-lover. </p>
-            <a href="/signup.html"class="btn-primary-sign-up" target="_blank">Sign Up</a>
+          <h3>Hot Deal ! Sale Up To 25% Off</h3>
+          <p>
+            It is a long established fact that a flower can change mood of an
+            aristrocratic nature-lover.
+          </p>
+          <a href="/signup.html" class="btn-primary-sign-up" target="_blank"
+            >Sign Up</a
+          >
         </div>
-        <img src="images/pngwing 8.png" alt="" class="hot-deal-image">
-
-        
+        <img
+          src="images/pngwing 8.png"
+          alt=""
+          class="hot-deal-image"
+          height="520px"
+        />
       </section>
       <section class="social-media">
         <h3>Instagram</h3>
-        <p>It is a long established fact that Instagram is the best social media for sharing pictures of flower.</p>
+        <p>
+          It is a long established fact that Instagram is the best social media
+          for sharing pictures of flower.
+        </p>
       </section>
       <section class="random-flower">
-        <img src="images/Flower 01.png" alt="">
-        <img src="images/Rectangle 4.png" alt="">
-        <img src="images/Rectangle 5.png" alt="">
-        <img src="images/Rectangle 6.png" alt="">
+        <img src="images/Flower 01.png" alt="" />
+        <img src="images/Rectangle 4.png" alt="" />
+        <img src="images/Rectangle 5.png" alt="" />
+        <img src="images/Rectangle 6.png" alt="" />
       </section>
-      <section></section>
+      <section class="latest-deal">
+        <div class="latest-deal-intro">
+          <h2>Get The Latest Deals</h2>
+          <p>$30 coupon for first shopping</p>
+
+          <input
+            type="text"
+            name="latest-deal-subscribe"
+            id="latest-deal-subscribe-input"
+            placeholder="Enter Your Email Here..."
+          />
+          <button class="btn-primary-latest-deal-subscribe">
+            Subscribe
+          </button>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="about-us-footer">
+        <h2 class="footer-header"><span id="colored-footer-text">Flower</span>Shop</h2>
+        <p>
+Flowers are nature's delicate marvels, captivating our senses with their vibrant colors, enchanting fragrances, and intricate designs. They symbolize beauty, grace, and purity, breathing life into any environment they grace. </p>
+
+<p class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+    </footer>
   </body>
 </html>
