--- a/index.html
+++ b/index.html
@@ -13,18 +13,25 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <script src="https://kit.fontawesome.com/98ce73418e.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-        <nav class="nav-class"><ul >
-            <li><a href=".featured-flower" class="nav-list-one">Featured Flower</a></li>
-        </ul>
-        <ul >
-            <li><a href=".hot-deal-text">Hot Deal</a></li>
+      <nav class="nav-class">
+        <ul>
+          <li><a href="#" class="nav-list-one">Featured Flower</a></li>
+          <!-- .featured-flower -->
         </ul>
         <ul>
-            <li><a href=".about-us-footer">About Us</a></li>
-        </ul></nav>
+          <li><a href="#">Hot Deal</a></li>
+          <!-- .hot-deal-text -->
+        </ul>
+        <ul>
+          <li><a href="#" target="_blank">About Us</a></li>
+          <!-- .about-us-footer -->
+        </ul>
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </nav>
     </header>
     <main>
       <section>
@@ -108,18 +115,48 @@
             id="latest-deal-subscribe-input"
             placeholder="Enter Your Email Here..."
           />
-          <button class="btn-primary-latest-deal-subscribe">
-            Subscribe
-          </button>
+          <button class="btn-primary-latest-deal-subscribe">Subscribe</button>
         </div>
       </section>
-    </main>
-    <footer class="about-us-footer">
-        <h2 class="footer-header"><span id="colored-footer-text">Flower</span>Shop</h2>
+      <section class="flower-of-the-month">
+        <h2>Flower of the Month Club</h2>
         <p>
-Flowers are nature's delicate marvels, captivating our senses with their vibrant colors, enchanting fragrances, and intricate designs. They symbolize beauty, grace, and purity, breathing life into any environment they grace. </p>
+          Elevate your flower experience with our exclusive Flower of the Month
+          Club...
+        </p>
+        <p>
+          Join our club and receive a carefully curated selection of exquisite
+          blooms delivered right to your doorstep each month...
+        </p>
+        <p>
+          Immerse yourself in a journey of discovery as our expert florists
+          handpick the finest seasonal flowers...
+        </p>
+        <p>
+          From vibrant bouquets to elegant arrangements, our Flower of the Month
+          Club offers a unique way to indulge in the beauty and joy of
+          flowers...
+        </p>
+        <p>
+          Treat yourself or surprise a loved one with the gift that keeps on
+          blooming!
+        </p>
+        <a href="#"class="click-to-join" target="_blank">Click to Join The Club </a>
+      </section>
+    </main>
 
-<p class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+    <footer class="about-us-footer">
+      <h2 class="footer-header">
+        <span id="colored-footer-text">Flower</span>Shop
+      </h2>
+      <p>
+        Flowers are nature's delicate marvels, captivating our senses with their
+        vibrant colors, enchanting fragrances, and intricate designs. They
+        symbolize beauty, grace, and purity, breathing life into any environment
+        they grace.
+      </p>
+
+      <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
     </footer>
   </body>
 </html>
