--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               distribution of letters.
             </p>
             <!-- <button class="btn-primary" target="_blank">Shop Now</button> -->
-            <a href="/shopNow.html" class="btn-primary-shop-now" target="_blank"
+            <a href="#" class="btn-primary-shop-now" target="_blank"
               >Shop Now</a
             >
           </div>
@@ -80,7 +80,7 @@
             It is a long established fact that a flower can change mood of an
             aristrocratic nature-lover.
           </p>
-          <a href="/signup.html" class="btn-primary-sign-up" target="_blank"
+          <a href="#" class="btn-primary-sign-up" target="_blank"
             >Sign Up</a
           >
         </div>
@@ -115,7 +115,11 @@
             id="latest-deal-subscribe-input"
             placeholder="Enter Your Email Here..."
           />
-          <button class="btn-primary-latest-deal-subscribe">Subscribe</button>
+          <a href="#"target="_blank" class="btn-primary-latest-deal-subscribe">Subscribe</a>
+          <!-- <button class="btn-primary-latest-deal-subscribe">Subscribe</button> -->
+
+          <!-- <input type="submit" value="Subscribe" class="btn-primary-latest-deal-subscribe"> -->
+
         </div>
       </section>
       <section class="flower-of-the-month">
