--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
               distribution of letters.
             </p>
             <!-- <button class="btn-primary" target="_blank">Shop Now</button> -->
-            <a href="#" class="btn-primary-shop-now" target="_blank"
+            <!-- <a href="#" class="btn btn-primary-shop-now" target="_blank"
               >Shop Now</a
-            >
+            > -->
+            <button class="btn btn-primary-shop-now"  target="_blank">Shop Now</button>
+
           </div>
           <img class="shop-intro-flower" src="./images/pngwing 10.png" alt="" />
         </div>
