--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <script src="https://kit.fontawesome.com/98ce73418e.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/98ce73418e.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -45,12 +48,12 @@
               distribution of letters.
             </p>
             <!-- <button class="btn-primary" target="_blank">Shop Now</button> -->
-            <!-- <a href="#" class="btn btn-primary-shop-now" target="_blank"
+            <a href="#" class="btn btn-primary-shop-now" target="_blank"
               >Shop Now</a
-            > -->
-            <button class="btn btn-primary-shop-now"  target="_blank">Shop Now</button>
-
+            >
+            <!-- <button class="btn btn-primary-shop-now"  target="_blank">Shop Now</button> -->
           </div>
+
           <img class="shop-intro-flower" src="./images/pngwing 10.png" alt="" />
         </div>
       </section>
@@ -82,9 +85,7 @@
             It is a long established fact that a flower can change mood of an
             aristrocratic nature-lover.
           </p>
-          <a href="#" class="btn-primary-sign-up" target="_blank"
-            >Sign Up</a
-          >
+          <a href="#" class="btn-primary-sign-up" target="_blank">Sign Up</a>
         </div>
         <img
           src="images/pngwing 8.png"
@@ -117,11 +118,12 @@
             id="latest-deal-subscribe-input"
             placeholder="Enter Your Email Here..."
           />
-          <a href="#"target="_blank" class="btn-primary-latest-deal-subscribe">Subscribe</a>
+          <a href="#" target="_blank" class="btn-primary-latest-deal-subscribe"
+            >Subscribe</a
+          >
           <!-- <button class="btn-primary-latest-deal-subscribe">Subscribe</button> -->
 
           <!-- <input type="submit" value="Subscribe" class="btn-primary-latest-deal-subscribe"> -->
-
         </div>
       </section>
       <section class="flower-of-the-month">
@@ -129,25 +131,23 @@
         <p>
           Elevate your flower experience with our exclusive Flower of the Month
           Club...
-        </p>
-        <p>
+        <br>
           Join our club and receive a carefully curated selection of exquisite
           blooms delivered right to your doorstep each month...
-        </p>
-        <p>
+        <br>
           Immerse yourself in a journey of discovery as our expert florists
           handpick the finest seasonal flowers...
-        </p>
-        <p>
+        <br>
           From vibrant bouquets to elegant arrangements, our Flower of the Month
           Club offers a unique way to indulge in the beauty and joy of
           flowers...
-        </p>
-        <p>
+        <br>
           Treat yourself or surprise a loved one with the gift that keeps on
           blooming!
-        </p>
-        <a href="#"class="click-to-join" target="_blank">Click to Join The Club </a>
+        <br>
+        <a href="#" class="click-to-join" target="_blank"
+          >Click to Join The Club
+        </a>
       </section>
     </main>
 
@@ -162,7 +162,7 @@
         they grace.
       </p>
 
-      <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
+      <p class="copyright">&copy; 2020-2023, FlowerShop.com. All rights reserved.</p>
     </footer>
   </body>
 </html>
